* SimpleTax.csproj: * SimpleTax.dll: * SimpleTax.pdb: * SimpleTax.pdb: * SimpleTax.dll: * FHCCOverviewControl.cs: * UserPrefs.xml: * SearchDateViewModel.cs: * DatabaseHelpers.cs: * SpectrumServicesController.cs: * FHCC_Overview.cshtml: * ValidateCorrectDate.cs: * SimpleTax.csproj.FileListAbsolute.txt: * SimpleTax.csproj.CoreCompileInputs.cache: * SimpleTax.csproj.AssemblyReference.cache: * System.Runtime.InteropServices.RuntimeInformation.dll:
* SimpleTax-Debug.json: fixed errors in fhcc overview

--- a/SimpleTax.csproj
+++ b/SimpleTax.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Models\FHCC Overview\Couriers.cs" />
     <Compile Include="Models\FHCC Overview\Products.cs" />
     <Compile Include="Models\FHCC Overview\ProductsOrderedDS.cs" />
+    <Compile Include="ViewModels\SearchDateViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
